--- a/muaz-rehman-site/src/Resources/App.css
+++ b/muaz-rehman-site/src/Resources/App.css
@@ -1,4 +1,7 @@
 .App {
+  /*background-image: url(./pattern.png);*/
+  background-color: #7EBFA7;
+
   text-align: center;
 }
 
@@ -14,7 +17,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -35,4 +37,21 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.Content {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-inline: 50px;
+  max-width: 1200px;
+  border-radius: 15px;
 }
