--- a/muaz-rehman-site/src/Resources/App.css
+++ b/muaz-rehman-site/src/Resources/App.css
@@ -1,8 +1,63 @@
-.App {
-  /*background-image: url(./pattern.png);*/
-  background-color: #7EBFA7;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+:root {
+  --bg-dark: rgba(255, 255, 255, 0.025);
+  --main:#FF5043;
+  --warn:#F2AD85;
+  --info:#31B9DB;
+  --danger:#F16F61;
+  --main-dark:#3FA693;
+  --color-highlight: 255, 78, 65;
+}
 
+p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+}
+
+b {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+}
+
+h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 4rem;
+}
+
+h2 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3rem;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+h3 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.App {
+  width: 100%;
+  height: 100%;
+}
+
+.HeroBgColor {
+  /*background-image: url(./pattern.png);*/
+  background-color: #161616;
   text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0px;
+  top: 0px;
+
+  z-index: -2;
+}
+
+.BG1 {
+  background-color: #161616;
 }
 
 .App-logo {
@@ -39,13 +94,39 @@
   }
 }
 
+
 .Section {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  margin-top: 200px;
+  margin-bottom: 200px;
+  margin-right: 100px;
+  margin-left: 100px;
+}
+
+.Left {
+  display: flex;
   justify-content: center;
-  padding-top: 50px;
+  margin-left: 250px;
+  padding-right: 50px;
   padding-bottom: 50px;
+}
+
+.Right {
+  margin-right: 250px;
+  display: flex;
+  justify-content: center;
+}
+
+.Space {
+  height: 150px;
+}
+
+.HalfWidth {
+  width: 50%;
 }
 
 .Content {
@@ -54,4 +135,328 @@
   padding-inline: 50px;
   max-width: 1200px;
   border-radius: 15px;
+}
+
+.HeroTitle {
+  position: absolute;
+  bottom: 185px;
+  z-index: -1;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 400px;
+  color: white;
+  user-select: none;
+  height: 100px;
+}
+
+.HeroBg {
+  position: absolute;
+  width: 100%;
+  height: 350px;
+  left: 0px;
+  bottom: 50px;
+
+  z-index: -2;
+
+  background: transparent linear-gradient(180deg, #FFFFFF 0%, #FFFFFF 15%, #000000 74%, #E4E4E4 77%, #FFFFFF 87%, #FFFFFF 100%) 0% 0% no-repeat padding-box;
+  mix-blend-mode: multiply;
+  opacity: 0.2;
+}
+
+.Floater {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -125px;
+  margin-left: -400px;
+  padding-bottom: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+
+}
+
+.FloaterTextSection {
+  height: 250px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+  padding-left: 50px;
+}
+
+.FloaterPicContainer {
+  max-width: 250px;
+  max-height: 250px;
+  width: 250px;
+  height: 250px;
+}
+
+.FloaterPic {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 75px;
+  z-index: 1;
+}
+
+.FloaterPicBG {
+  object-fit: cover;
+  position: absolute;
+  top: 50px;
+  left: 0px;
+  border-radius: 75px;
+  filter: blur(35px);
+  opacity: 0.5;
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .HeroTitle {
+    bottom: 125px;
+    font-size: 250px;
+  }
+
+  .Section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    margin-right: 100px;
+    margin-left: 100px;
+  }
+  
+  .Left {
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 0px;
+  }
+
+  .Right {
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0px;
+  }
+
+  .HalfWidth {
+    width: 85%;
+  }
+
+  .Space {
+    height: 0px;
+  }
+
+  .Floater{
+    margin-top: -250px;
+    margin-left: -125px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .FloaterTextSection {
+    height: fit-content;
+    width: 250px;
+    padding-top: 50px;
+    padding-left: 0px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .FloaterPicContainer {
+    width: 125px;
+    height: 125px;
+  }
+
+  .FloaterPic {
+    border-radius: 35px;
+  }
+
+  .FloaterPicBG {
+    opacity: 0;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .HeroTitle {
+    bottom: 190px;
+    font-size: 150px;
+  }
+
+  .HeroBg {
+    bottom: 150px;
+  }
+
+}
+
+@media only screen and (max-width: 450px) {
+  .HeroTitle {
+    bottom: 155px;
+    font-size: 60px;
+  }
+  .HeroBg {
+    bottom: 150px;
+  }
+}
+
+
+.NavLogo {
+  position: absolute;
+  top: 45px;
+  left: 33px;
+  width: 77px;
+  height: 50px;
+  z-index: 5;
+}
+
+.NavButton {
+  color: #FFFFFF;
+
+  position: absolute;
+  top: 70px;
+  right: 45px;
+  width: 35px;
+  height: 35px;
+  z-index: 5;
+}
+
+.NavMenu {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  text-align: center;
+
+  font-family: 'Open Sans', sans-serif;
+  font-size: 32px;
+  color: white;
+
+  background-color: var(--main);
+  z-index: 4;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.NavItem {
+  color: white;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+}
+
+.NavItem:hover {
+  color: black
+}
+
+.PhyContainer {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 1000px;
+
+  z-index: 2;
+}
+
+.Card {
+  border-radius: 25px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+}
+
+.Dark {
+  color: #000000;
+}
+
+.LogoPath {
+  fill: blue;
+}
+
+.ButtonImg {
+  width: 100%;
+  height: 100%;
+  padding-right: 5px;
+  
+  max-width: 500px;
+  max-height: 100px;
+}
+
+.ButtonRow {
+  display: inline-flex;
+  text-align: center;
+  align-items: center;
+}
+
+.ButtonItemRow {
+
+  display: inline-flex;
+  text-align: center;
+  align-items: center;
+}
+
+button {
+  max-width: 500px;
+  max-height: 100px;
+
+  border-radius: 22px;
+  border: none;
+  align-items: center;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  margin-right: 25px;
+  padding-left: 30px;
+  padding-right: 30px;
+  cursor: pointer;
+  background-color: var(--main);
+  box-shadow: 0px 15px 22px -17px #FF6054;
+
+}
+
+button:hover {
+  background-color: #ff3a2b;
+  box-shadow: 0px 15px 22px -17px #ff4c3e;
+  transform: translate(0,25);
+}
+
+.SectionPText {
+  font-size: 1rem;
+  font-family: 'Inter', sans-serif;
+  font-weight: 300;
+  line-height: 1.6;
+}
+
+.BurgerButton {
+  transition: all .2s ease-in-out;
+}
+
+.BurgerButton:hover {
+  transform: scale(1.1);
+}
+
+.VerticalContainer {
+  max-width: 600px;
+}
+
+.NavPopup {
+  position: absolute;
+  top: 125px;
+  right: 100px;
 }
